section's title designed

--- a/editor.html
+++ b/editor.html
@@ -9,8 +9,20 @@
 	</head>
  
 	<body>
-		<div id="main_div">
-		</div>
+		<aside id="left_aside">
+			<section id="project_view_section">
+				<h2>Project view</h2>
+			</section>
+			<section id="palettes_section">
+				<h2>Palettes</h2>
+			</section>
+		</aside>
+
+		<aside id="right_aside">
+			<section  id="tile_preview_section">
+				<h2>Tile preview</h2>
+			</section>
+		</aside>
 		
 		<script type="text/javascript" src="script/editor.js"></script>
 	</body>
