--- a/editor.html
+++ b/editor.html
@@ -11,19 +11,22 @@
 	<body>
 		<aside id="left_aside">
 			<section id="project_view_section">
-				<h2>Project view</h2>
+				<h2>Project view<span onclick="show_hide(this)">-</span></h2>
+				<p>Yo</p>
 			</section>
 			<section id="palettes_section">
-				<h2>Palettes</h2>
+				<h2>Palettes<span onclick="show_hide(this)">-</span></h2>
+				<p>Yo</p>
 			</section>
 		</aside>
 
 		<aside id="right_aside">
 			<section  id="tile_preview_section">
-				<h2>Tile preview</h2>
+				<h2>Tile preview<span onclick="show_hide(this)">-</span></h2>
+				<p>Yo</p>
 			</section>
 		</aside>
 		
-		<script type="text/javascript" src="script/editor.js"></script>
+		<script type="text/javascript" src="script/ui.js"></script>
 	</body>
 </html>
