Handle rectangular tiles

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 		</header>
 
 		<div id="main_div">
-			<span id="size_span">40</span>
-			<input oninput="update_slide(this)" type="range" min="20" max="100" value="40">
+			<span id="width_span">40</span>
+			<input id="width_input" oninput="update_size()" type="range" min="20" max="100" value="40">
+			<span id="height_span">40</span>
+			<input id="height_input" oninput="update_height()" type="range" min="20" max="100" value="40">
 			<a onclick="save_size()" href="file:///C:/Users/Kamipown/Workspace/Tile2D/editor.html">Start Editing !</a>
 		</div>
 
