--- a/editor.html
+++ b/editor.html
@@ -36,7 +36,12 @@
 			</section>
 			<section id="tools_section">
 				<h2>Tools<span onclick="show_hide(this)">-</span></h2>
-				<p>Yo</p>
+				<img src="img/tools/pen.png"/>
+				<img src="img/tools/pipette.png"/>
+				<img src="img/tools/eraser.png"/>
+				<img src="img/tools/bucket.png"/>
+				<img src="img/tools/lighten.png"/>
+				<img src="img/tools/darken.png"/>
 			</section>
 			<section id="palettes_section">
 				<h2>Palettes<span onclick="show_hide(this)">-</span></h2>
