--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<input id="width_input" oninput="update_size()" type="range" min="20" max="100" value="40">
 			<span id="height_span">40</span>
 			<input id="height_input" oninput="update_height()" type="range" min="20" max="100" value="40">
-			<a onclick="save_size()" href="file:///C:/Users/Kamipown/Workspace/Tile2D/editor.html">Start Editing !</a>
+			<a onclick="save_size()" href="editor.html">Start Editing !</a>
 		</div>
 
 		<script type="text/javascript" src="script/index.js"></script>
