--- a/editor.html
+++ b/editor.html
@@ -36,12 +36,12 @@
 			</section>
 			<section id="tools_section">
 				<h2>Tools<span onclick="show_hide(this)">-</span></h2>
-				<div class="tool_handler" onclick="select_tool(this)" id="selected_tool"><img src="img/tools/pen.svg"/><span class="shortcut">P</span></div>
-				<div class="tool_handler" onclick="select_tool(this)"><img src="img/tools/pipette.svg"/><span class="shortcut">S</span></div>
-				<div class="tool_handler" onclick="select_tool(this)"><img src="img/tools/eraser.svg"/><span class="shortcut">E</span></div>
-				<div class="tool_handler" onclick="select_tool(this)"><img src="img/tools/bucket.svg"/><span class="shortcut">B</span></div>
-				<div class="tool_handler" onclick="select_tool(this)"><img src="img/tools/lighten.svg"/><span class="shortcut">L</span></div>
-				<div class="tool_handler" onclick="select_tool(this)"><img src="img/tools/darken.svg"/><span class="shortcut">D</span></div>
+				<div class="tool_handler" onclick="select_tool(this, 'pen')" id="selected_tool"><img src="img/tools/pen.svg"/><span class="shortcut">P</span></div>
+				<div class="tool_handler" onclick="select_tool(this, 'pipette')"><img src="img/tools/pipette.svg"/><span class="shortcut">S</span></div>
+				<div class="tool_handler" onclick="select_tool(this, 'eraser')"><img src="img/tools/eraser.svg"/><span class="shortcut">E</span></div>
+				<div class="tool_handler" onclick="select_tool(this, 'bucket')"><img src="img/tools/bucket.svg"/><span class="shortcut">B</span></div>
+				<div class="tool_handler" onclick="select_tool(this, 'lighten')"><img src="img/tools/lighten.svg"/><span class="shortcut">L</span></div>
+				<div class="tool_handler" onclick="select_tool(this, 'darken')"><img src="img/tools/darken.svg"/><span class="shortcut">D</span></div>
 			</section>
 			<section id="palettes_section">
 				<h2>Palettes<span onclick="show_hide(this)">-</span></h2>
