tools options updated

--- a/editor.html
+++ b/editor.html
@@ -42,6 +42,12 @@
 				<div class="tool_handler" onclick="select_tool(this, 'bucket')"><img src="img/tools/bucket.svg"/><span class="shortcut">B</span></div>
 				<div class="tool_handler" onclick="select_tool(this, 'lighten')"><img src="img/tools/lighten.svg"/><span class="shortcut">L</span></div>
 				<div class="tool_handler" onclick="select_tool(this, 'darken')"><img src="img/tools/darken.svg"/><span class="shortcut">D</span></div>
+				<div class="tool" id="tool_option_pen"></div>
+				<div class="tool" id="tool_option_pipette"></div>
+				<div class="tool" id="tool_option_eraser"></div>
+				<div class="tool" id="tool_option_bucket"></div>
+				<div class="tool" id="tool_option_lighten"></div>
+				<div class="tool" id="tool_option_darken"></div>
 			</section>
 			<section id="palettes_section">
 				<h2>Palettes<span onclick="show_hide(this)">-</span></h2>
