start editing palettes

--- a/editor.html
+++ b/editor.html
@@ -109,7 +109,12 @@
 			</section>
 			<section id="palettes_section">
 				<h2>Palettes<span onclick="show_hide(this)">-</span></h2>
-				<input type="color" value="#fad345" />
+				<select>
+					<option>Custom palette</option>
+					<option>Palette 1</option>
+					<option>Palette 2</option>
+					<option>Palette 3</option>
+				</select>
 			</section>
 		</aside>
 
